force-app/main/default/objects/Expense_Tracker__c/Expense_Tracker__c.object-meta.xml
<CustomObject>
    <label>Expense Tracker</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Expense Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>