force-app/main/default/objects/Expense_Tracker__c/fields/Cost_center__c.field-meta.xml
<CustomField>
    <fullName>Cost_center__c</fullName>
    <label>Cost center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>