force-app/main/default/objects/Expense_Tracker__c/fields/Cost_centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_centre__c</fullName>
    <label>Cost centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>