force-app/main/default/objects/Expense_Tracker__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian Rupee</fullName>
                <default>true</default>
                <label>Indian Rupee</label>
            </value>
            <value>
                <fullName>U.S. Dollar</fullName>
            </value>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Canadian Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>