force-app/main/default/objects/Expense_Tracker__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Expense Trackers</relationshipLabel>
    <relationshipName>Expense_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>