force-app/main/default/objects/Expense_Tracker__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education Expenses</fullName>
            </value>
            <value>
                <fullName>Gifts and Donations</fullName>
            </value>
            <value>
                <fullName>Healthcare Expenses</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Transportation Expenses</fullName>
            </value>
            <value>
                <fullName>Travel Expenses</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>