force-app/main/default/objects/Expense_Tracker__c/fields/Expense_Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Date__c</fullName>
    <label>Expense Claim Date</label>
    <type>Date</type>
</CustomField>