force-app/main/default/objects/Expense_Tracker__c/fields/HR__c.field-meta.xml
<CustomField>
    <fullName>HR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expense_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>