force-app/main/default/objects/Expense_Tracker__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_550, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_550)) &amp;
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>