force-app/main/default/objects/Expense_Tracker__c/listViews/Account_Team_Expense_Tracker.listView-meta.xml
<ListView>
    <fullName>Account_Team_Expense_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Team</label>
    <queue>Account_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>