force-app/main/default/objects/Expense_Tracker__c/listViews/Finance_Team_Expense_Tracker.listView-meta.xml
<ListView>
    <fullName>Finance_Team_Expense_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Team</label>
    <queue>Finance_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>