force-app/main/default/objects/Expense_Tracker__c/listViews/HR_Approval_Expense_Tracker.listView-meta.xml
<ListView>
    <fullName>HR_Approval_Expense_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Approval</label>
    <queue>HR_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>