force-app/main/default/objects/Expense_Tracker__c/listViews/HR_Queue_Expense_Tracker.listView-meta.xml
<ListView>
    <fullName>HR_Queue_Expense_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Queue</label>
    <queue>HR_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>